# solidfire-sdk-python

./: .gitignore  .pyccoon  .travis.yml  MANIFEST.in  README.md  README.rst  _config.yml  build.sh  collectBlackDuck.sh  conf.py  contributors.txt  convert.rb  descriptor_version.json  examples.md  front.yml  generator_version.json  index.html  index.md  index.rst  manage_accounts.md  manage_accounts.rst  modules.rst  params.json  python_version.json  setup.cfg  setup.py  snapshot_scheduling.md  snapshot_scheduling.rst  solidfire.adaptor.rst  solidfire.apiactual.rst  solidfire.common.rst  solidfire.custom.rst  solidfire.rst  solidfire.util.rst  tox.ini
_layouts/: index.html
docs/: Makefile  conf.py  make.bat  modules.rst  rtfd-requirements.txt  solidfire.common.rst  solidfire.rst
examples/: Enum_Support.rst  README.rst  manage_accounts.md  manage_accounts.rst  snapshot_scheduling.md  snapshot_scheduling.rst
scripts/: build.sh
solidfire/: .gitignore  __init__.py  descriptor_version.json  factory.py  generator_version.json  models.py  mytest.py  objects.py  resources.py  results.py  unitTests.py
stylesheets/: stylesheet.css
test/: test_solidFireElement.py
tests/: ListVolumes.json  base_test.py  test_ChapSecret.py  test_api_method_version_error.py  test_api_parameter_version_error.py  test_api_server_error.py  test_api_version_error.py  test_api_version_exceeded_error.py  test_api_version_unsupported_error.py  test_element.py  test_forward_compatibility.py  test_requests.py  test_required_parameters.py  test_schedule.py  test_service_base.py  test_vlan.py  (+1 more)
(+130 files in other folders)
