[bumpversion]
current_version = 1.2.0.118
parse = (?P<major>\d+)\.(?P<minor>.*)\.(?P<patch>\d+)\.(?P<build>\d+)
serialize = 
	{major}.{minor}.{patch}.{build}

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[metadata]
description-file = README.rst

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bumpversion:file:README.py]

[bumpversion:file:setup.py]

[bumpversion:file:docs/conf.py]

