[bumpversion]
current_version = 1.6.0.40
parse = (?P<major>\d+)\.(?P<minor>.*)\.(?P<patch>\d+)\.(?P<build>\d+)
serialize = 
	{major}.{minor}.{patch}.{build}

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[metadata]
description-file = README.rst

[build_sphinx]
build-dir = _build
all_files = 1

[upload_sphinx]
upload-dir = _build/html

[bumpversion:file:README.rst]

[bumpversion:file:setup.py]

[bumpversion:file:conf.py]

